<resources>
    <string name="app_name">Gacha Rock</string>
    <string name="gems">Gems:</string>
    <string name="gem_count">[GEMS]</string>
    <string name="player_lvl">Player Lvl:</string>
    <string name="store_button">Store</string>
    <string name="summons_button">Summons</string>
    <string name="settings_button">Settings</string>
    <string name="imageDescription">TODO</string>
    <string name="back">Back</string>

    <string name="click_button_text">Click Me!</string>
    <string name="reset_button_text">Reset</string>
    <string name="_0" translatable="false">0</string>
    <string name="rock_collection_button">Rock Collection</string>
    <string name="back_button">Back</string>

    <string name="summon_single">Mine 1x</string>
    <string name="summon_multi">Mine 10x</string>

    <string name="settings">Settings</string>
    <string name="dev_settings">Dev Settings</string>
    <string name="audio_setting">Audio ON/OFF</string>
    <string name="dark_mode_setting">Dark Mode ON/OFF</string>
    <string name="dev_mode">Dev Mode ON/OFF</string>
    <string name="infinite_loot">Infinite Loot Boxes ON/OFF</string>
    <string name="everything_free">Everything is Free ON/OFF</string>

    <string name="shop">Shop</string>
    <string name="player_lvl_num">00</string>
    <string name="gold_count">[GOLD]</string>
    <string name="clear">Clear</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="clear_all_rocks">Clear All Rocks:</string>
    <string name="number_of_picks">Picks:</string>
    <string name="pick_count">[PICKS]</string>
    <string name="content_discription">Pick</string>
    <string name="gold">Gold:</string>
    <string name="disable_ads">Disable Ads ON/OFF</string>
    <string name="fast_animations">Fast Animations ON/OFF</string>
    <string name="disable_animations">Disable Animations ON/OFF</string>
</resources>