<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".store">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"
        android:text="@string/shop"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/pickText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/pickText"
        app:layout_constraintTop_toTopOf="@+id/pickText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/gemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gem_count"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/gem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pickText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/pick_count"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/pickaxe"
        app:layout_constraintStart_toEndOf="@+id/pickaxe"
        app:layout_constraintTop_toTopOf="@+id/pickaxe" />

    <ImageView
        android:id="@+id/pickaxe"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/summon_pick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/goldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gold_count"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/goldCoin3"
        app:layout_constraintStart_toEndOf="@+id/goldCoin3"
        app:layout_constraintTop_toTopOf="@+id/goldCoin3" />

    <ImageView
        android:id="@+id/goldCoin3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/gold_coin"
        app:layout_constraintStart_toEndOf="@+id/gemText"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="416dp"
        android:layout_height="668dp"
        android:layout_marginTop="105dp"
        android:foregroundGravity="center|center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:orientation="vertical"
                android:rowCount="3">

                <ImageButton
                    android:id="@+id/cashButton1"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:onClick="buttonClick"
                    android:src="@drawable/cash_button1"
                    android:tag="cashButton1"
                    tools:srcCompat="@drawable/cash_button1" />

                <ImageButton
                    android:id="@+id/cashButton2"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:onClick="buttonClick"
                    android:src="@drawable/cash_button2"
                    android:tag="cashButton2"
                    tools:srcCompat="@drawable/cash_button2" />

                <ImageButton
                    android:id="@+id/cashButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="3"
                    android:layout_columnWeight="1"
                    android:onClick="buttonClick"
                    android:src="@drawable/cash_button3"
                    android:tag="cashButton3"
                    tools:srcCompat="@drawable/cash_button3" />

                <ImageButton
                    android:id="@+id/cashButton4"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:onClick="buttonClick"
                    android:src="@drawable/cash_button4"
                    android:tag="cashButton4"
                    tools:srcCompat="@drawable/cash_button4" />

                <ImageButton
                    android:id="@+id/cashButton5"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:onClick="buttonClick"
                    android:src="@drawable/cash_button5"
                    android:tag="cashButton5"
                    tools:srcCompat="@drawable/cash_button5" />

                <ImageButton
                    android:id="@+id/cashButton6"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:onClick="buttonClick"
                    android:src="@drawable/cash_button6"
                    android:tag="cashButton6"
                    tools:srcCompat="@drawable/cash_button6" />

                <ImageButton
                    android:id="@+id/cashButton7"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:onClick="buttonClick"
                    android:src="@drawable/cash_button7"
                    android:tag="cashButton7"
                    tools:srcCompat="@drawable/cash_button7" />

            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:orientation="vertical"
                android:rowCount="3"
                tools:layout_editor_absoluteX="411dp"
                tools:layout_editor_absoluteY="64dp">

                <ImageButton
                    android:id="@+id/pickButton1"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:onClick="buttonClick"
                    android:src="@drawable/pick_button1"
                    android:tag="pickButton1"
                    tools:srcCompat="@drawable/pick_button1" />

                <ImageButton
                    android:id="@+id/pickButton2"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:onClick="buttonClick"
                    android:src="@drawable/pick_button2"
                    android:tag="pickButton2"
                    tools:srcCompat="@drawable/pick_button2" />

                <ImageButton
                    android:id="@+id/pickButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="3"
                    android:layout_columnWeight="1"
                    android:onClick="buttonClick"
                    android:src="@drawable/pick_button3"
                    android:tag="pickButton3"
                    tools:srcCompat="@drawable/pick_button3" />

                <ImageButton
                    android:id="@+id/pickButton4"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:onClick="buttonClick"
                    android:src="@drawable/pick_button4"
                    android:tag="pickButton4"
                    tools:srcCompat="@drawable/pick_button4" />

                <ImageButton
                    android:id="@+id/pickButton5"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:onClick="buttonClick"
                    android:src="@drawable/pick_button5"
                    android:tag="pickButton5"
                    tools:srcCompat="@drawable/pick_button5" />

                <ImageButton
                    android:id="@+id/pickButton6"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:onClick="buttonClick"
                    android:src="@drawable/pick_button6"
                    android:tag="pickButton6"
                    tools:srcCompat="@drawable/pick_button6" />

                <ImageButton
                    android:id="@+id/pickButton7"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:onClick="buttonClick"
                    android:src="@drawable/pick_button7"
                    android:tag="pickButton7"
                    tools:srcCompat="@drawable/pick_button7" />
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:orientation="vertical"
                android:rowCount="3"
                tools:layout_editor_absoluteX="411dp"
                tools:layout_editor_absoluteY="64dp">

                <ImageButton
                    android:id="@+id/gemsButton1"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:onClick="buttonClick"
                    android:src="@drawable/gems_button1"
                    android:tag="gemsButton1"
                    tools:srcCompat="@drawable/gems_button1" />

                <ImageButton
                    android:id="@+id/gemsButton2"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:onClick="buttonClick"
                    android:src="@drawable/gems_button2"
                    android:tag="gemsButton2"
                    tools:srcCompat="@drawable/gems_button2" />

                <ImageButton
                    android:id="@+id/gemsButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="3"
                    android:layout_columnWeight="1"
                    android:onClick="buttonClick"
                    android:src="@drawable/gems_button3"
                    android:tag="gemsButton3"
                    tools:srcCompat="@drawable/gems_button3" />

                <ImageButton
                    android:id="@+id/gemsButton4"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:onClick="buttonClick"
                    android:src="@drawable/gems_button4"
                    android:tag="gemsButton4"
                    tools:srcCompat="@drawable/gems_button4" />

                <ImageButton
                    android:id="@+id/gemsButton5"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:onClick="buttonClick"
                    android:src="@drawable/gems_button5"
                    android:tag="gemsButton5"
                    tools:srcCompat="@drawable/gems_button5" />

                <ImageButton
                    android:id="@+id/gemsButton6"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:onClick="buttonClick"
                    android:src="@drawable/gems_button6"
                    android:tag="gemsButton6"
                    tools:srcCompat="@drawable/gems_button6" />

                <ImageButton
                    android:id="@+id/gemsButton7"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:onClick="buttonClick"
                    android:src="@drawable/gems_button7"
                    android:tag="gemsButton7"
                    tools:srcCompat="@drawable/gems_button7" />

            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:orientation="vertical"
                android:rowCount="3">

                <ImageButton
                    android:id="@+id/removeAdsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="3"
                    android:layout_columnWeight="1"
                    android:onClick="buttonClick"
                    android:src="@drawable/no_ads"
                    android:tag="removeAdsButton"
                    tools:srcCompat="@drawable/no_ads" />

            </GridLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>